# sdlpal_qt

./: CMakeLists.txt  CMakeUserPresets.json  README.md  sdlpal.sln  sdlpal.vcxproj  sdlpal.vcxproj.filters  sdlpal_q.sln  sdlpal_q.vcxproj
main/: CConfig.cpp  CConfig.h  CPalMain.cpp  CPalMain.h  Convers.cpp  Convers.h  caviplay.cpp  caviplay.h  cbattle.cpp  cbattle.h  cbattlebase.cpp  cbattlebase.h  cenemy.cpp  cenemy.h  cfight.cpp  cfight.h  cgameui.cpp  cgameui.h  cmap.cpp  cmenu.cpp  command.h  cpalbase.cpp  cpalbase.h  cpalbaseio.cpp  cpalbaseio.h  cpaldata.cpp  cpaldata.h  cpalevent.cpp  cpalevent.h  cpaleventhandler.cpp  cpaleventhandler.h  cpalui.cpp  cpalui.h  cplayer.cpp  cres.cpp  cscene.cpp  cscene.h  cscreen.cpp  cscreen.h  cscript.cpp  (+15 more)
main/res/: s.qrc  s.rc
palmain/: main.cpp
s/: CGetPALData.cpp  CListScriptEntry.h  CPixEdit.cpp  CPixEdit.h  CViewModel.cpp  CustomItemDelegrate.cpp  CustomItemDelegrate.h  FontFinder.cpp  FontFinder.h  cListScriptCall.cpp  cListScriptCall.h  ccellrange.cpp  ccellrange.h  cgetpaldata.h  cmapedit.cpp  cmapedit.h  cpopview.cpp  cpopview.h  ctableview.cpp  ctableview.h  cviewmodel.h  deployMap.cpp  deploymap.h  main.cpp  mainwindow.cpp  mainwindow.h  nopackedpict_dlg.cpp  nopackedpict_dlg.h  packedPict_Dlg.cpp  packedpict_dlg.h  t_data.h
sound/: caudiodevice.cpp  caudiodevice.h  caudiorixplayer.cpp  cmp3player.cpp  coggplayer.cpp  csound.cpp  csound.h  midiplayer.cpp  soundplayer.cpp  soundplayer.h  soundseting.h
sound/adplug/: convertopl.h  dosbox_opls.cpp  dosbox_opls.h  emuopls.h  fprovide.cpp  mame_opls.cpp  mame_opls.h  nuked_opl.c  opl.h  opltypes.h  rix.cpp  rix.h
sound/libmad/: mad.h  music_mad.c  music_mad.h  resampler.c
sound/native_midi/: native_midi.cpp  native_midi.h  native_midi_common.c  native_midi_common.h
